Fixed overflow clipping issue in safari

--- a/source/_scss/_components.media-article.scss
+++ b/source/_scss/_components.media-article.scss
@@ -1,9 +1,12 @@
 /* ==========================================================================
    #MEDIA-ARTICLE
    ========================================================================== */
-
+/*
+ * 1. Fixes an overlow clipping issue with safari
+ */
 .c-media-article {
     position: relative;
+    z-index: 1; /* 1 */
     border-radius: $global-radius;
     width: 100%;
     height: 100%;
@@ -14,7 +17,7 @@
     .c-media-article__header {
         display: block;
         position: relative;
-        z-index: 1;
+        z-index: 2; /* 1 */
         height: 100%;
     }
 
@@ -58,7 +61,7 @@
         position: absolute;
         top: 0;
         transition: $global-transition transform;
-        z-index: 0;
+        z-index: 0; /* 1 */
         background-color: $c-background;
         background-position: center;
         background-size: cover;
@@ -74,7 +77,7 @@
         position: absolute;
         bottom: 0;
         transition: $global-transition opacity;
-        z-index: 2;
+        z-index: 3; /* 1 */
         border-top: 1px solid rgba($c-white, .2);
         padding: $unit-tiny/2 $unit;
         width: 100%;
