--- a/source/_scss/main.css
+++ b/source/_scss/main.css
@@ -2104,8 +2104,13 @@ body:after {
 /* ==========================================================================
    #MEDIA-ARTICLE
    ========================================================================== */
+/*
+ * 1. Fixes an overlow clipping issue with safari
+ */
 .c-media-article {
   position: relative;
+  z-index: 1;
+  /* 1 */
   border-radius: 3px;
   width: 100%;
   height: 100%;
@@ -2115,7 +2120,8 @@ body:after {
 .c-media-article__header {
   display: block;
   position: relative;
-  z-index: 1;
+  z-index: 2;
+  /* 1 */
   height: 100%; }
 
 .c-media-article__link {
@@ -2157,6 +2163,7 @@ body:after {
   top: 0;
   transition: 0.33333s transform;
   z-index: 0;
+  /* 1 */
   background-color: #f8f8f8;
   background-position: center;
   background-size: cover;
@@ -2169,7 +2176,8 @@ body:after {
   position: absolute;
   bottom: 0;
   transition: 0.33333s opacity;
-  z-index: 2;
+  z-index: 3;
+  /* 1 */
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   padding: 2.5px 21px;
   width: 100%;
